--- a/missingkids/less/footer.less
+++ b/missingkids/less/footer.less
@@ -117,17 +117,21 @@
 
     .footer-links-wrapper {
       text-align: left;
-      @media (min-width: 768px) {
+      padding: 0 8px;
+      @media (min-width: @screen-sm) {
         display: inline-block;
         min-width: 300px;
         margin-right: -13px;
+        padding: 0;
       }
       .social-icons {
         margin: 0;
         padding-left: 0;
-        float: right;
-        @media (max-width: 768px) {
-          float: left;
+        float: left;
+        position: absolute;
+        @media (min-width: @screen-sm) {
+          position: static;
+          float: right;
         }
         @media (min-width: 768px) and (max-width: 1023px) {
           width: 75%;
@@ -151,6 +155,7 @@
         padding: 0;
         float: right;
         text-align: right;
+        height: 38px;
         @media (min-width: 768px) {
           text-align: center;
         }
@@ -181,27 +186,20 @@
               input[type='text'] {
                 min-width: 165px;
                 outline: none;
+                height: 24px;
                 border-radius: 5px;
                 border-color: #fff;
                 border-style: solid;
                 padding-left: 3px;
-                @media (max-width: 400px) {
-                  position: absolute;
-                  top: -15px;
-                  right: 0;
-                }
               }
               .search-submit{
                 position: absolute;
-                right: 2px;
-                top: 1px;
+                right: 5px;
+                top: 5px;
                 height: 18px;
                 background: #fff;
                 border: none;
                 font-size: 16px;
-                @media (max-width: 400px) {
-                  top: -15px;
-                }
                 .icon-search{
                   &:before{
                     color: #95989A;
