--- a/missingkids/less/header.less
+++ b/missingkids/less/header.less
@@ -363,11 +363,14 @@
 
                 &.social-icons {
                   font-size: 20px;
+                  padding-top: 2px;
+                  position: relative;
                   @media (min-width: @screen-sm) {
                     right: 16px;
                     bottom: -17px;
                   }
                   @media (min-width: @screen-md) {
+                    padding-top: 5px;
                     position: absolute;
                     right: 0;
                   }
